syntax = "proto3";
import "google/protobuf/timestamp.proto";

package auth;

service AuthService {
  rpc me(PassableUserTokenPayload) returns (PassableUserEntity) {}
}

message PassableUserTokenPayload {
  string id = 1;
  int32 exp = 2;
  int32 iat = 3;
}

message PassableUserEntity {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string username = 4;
  string email = 6;
  bool verified = 7;
  string role = 8;
  string hashedRefreshToken = 9;
  google.protobuf.Timestamp createdAt = 10;
  google.protobuf.Timestamp updatedAt = 11;
}
